# daily-panda-image-bot

./: .gitignore  README.md  api.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  image-publisher.yml  image_publisher.yml
events/: past_events.txt
prompts/: prompt_2025-05-29.txt  prompt_2025-05-30.txt  prompt_2025-05-31.txt  prompt_2025-06-01.txt  prompt_2025-06-02.txt  prompt_2025-06-03.txt  prompt_2025-06-04.txt  prompt_2025-06-05.txt  prompt_2025-06-06.txt  prompt_2025-06-07.txt  prompt_2025-06-08.txt  prompt_2025-06-09.txt  prompt_2025-06-10.txt  prompt_2025-06-11.txt  prompt_2025-06-12.txt  prompt_2025-06-13.txt  prompt_2025-06-14.txt  prompt_2025-06-15.txt  prompt_2025-06-16.txt  prompt_2025-06-17.txt  prompt_2025-06-18.txt  prompt_2025-06-19.txt  prompt_2025-06-20.txt  prompt_2025-06-21.txt  prompt_2025-06-22.txt  prompt_2025-06-23.txt  prompt_2025-06-24.txt  prompt_2025-06-25.txt  prompt_2025-06-26.txt  prompt_2025-06-27.txt  prompt_2025-06-28.txt  prompt_2025-06-29.txt  prompt_2025-06-30.txt  prompt_2025-07-01.txt  prompt_2025-07-02.txt  prompt_2025-07-03.txt  prompt_2025-07-04.txt  prompt_2025-07-05.txt  prompt_2025-07-06.txt  prompt_2025-07-07.txt  (+207 more)
src/daily_panda_image/: config.py  main.py
src/daily_panda_image/generators/: image_generator.py  prompt_generator.py
src/daily_panda_image/utils/: file_manager.py  news_scraper.py  text_processor.py
tests/generators/: test_image_generator.py  test_prompt_generator.py
tests/utils/: test_file_manager.py  test_text_processor.py
